k8s/nebula/apps/networking/misc-ingresses/dh-endpoints-plex.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: dh-plex
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.2.129
    ports:
      - name: https
        port: 32400
        protocol: TCP
