k8s/nebula/apps/networking/misc-ingresses/dh-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: dh
  namespace: networking
subsets:
  - addresses:
      - ip: 10.41.69.80
    ports:
      - name: https
        port: 443
        protocol: TCP
