k8s/nebula/apps/networking/misc-ingresses/dh-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dh
  namespace: networking
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: dh-plex
  namespace: networking
spec:
  ports:
    - port: 32400
      targetPort: 32400
      name: https
  type: ClusterIP
