k8s/nebula/apps/networking/misc-ingresses/genpi-minio-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: genpi-minio
  namespace: networking
spec:
  ports:
    - name: http
      port: 62759
  type: ClusterIP
