k8s/nebula/apps/networking/misc-ingresses/home-srv-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: tvheadend-home-srv
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.2.10
    ports:
      - name: http
        port: 9981
        protocol: TCP
