k8s/nebula/apps/networking/misc-ingresses/home-srv-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tvheadend-home-srv
  namespace: networking
spec:
  ports:
    - name: http
      port: 9981
  type: ClusterIP
