k8s/nebula/apps/networking/misc-ingresses/dh-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dh
  namespace: networking
  annotations:
    external-dns-cf/is-dns-public: "true"
    external-dns.alpha.kubernetes.io/target: "ingress.skylab.fi"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_name dh.skylab.fi;
      proxy_ssl_server_name on;
spec:
  ingressClassName: nginx-external
  rules:
    - host: "dh.skylab.fi"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dh
                port:
                  number: 443
  tls:
    - hosts:
        - "dh.skylab.fi"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dh-plex
  namespace: networking
  annotations:
    external-dns-cf/is-dns-public: "true"
    external-dns.alpha.kubernetes.io/target: "ingress.skylab.fi"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx-external
  rules:
    - host: "plex.dh.skylab.fi"
      http:
        paths:
          - backend:
              service:
                name: dh-plex
                port:
                  name: https
            pathType: Prefix
            path: "/"
  tls:
    - hosts:
        - "plex.dh.skylab.fi"
      secretName: plex-dh-tls
