k8s/nebula/apps/networking/misc-ingresses/home-srv-livetv-stream-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: livetv-stream
  namespace: networking
  annotations:
    auth-basic-fi.home.arpa/enabled: "true"
    nginx.ingress.kubernetes.io/auth-method: GET
    nginx.ingress.kubernetes.io/auth-url: http://10.0.0.56:40119/api/verify?auth=basic
    nginx.ingress.kubernetes.io/auth-response-headers: Remote-User,Remote-Groups
    nginx.ingress.kubernetes.io/auth-snippet: proxy_set_header X-Forwarded-Method $request_method;
    external-dns-cf/is-dns-public: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: external-nginx
  rules:
    - host: "tv.${MAIN_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/stream/"
            backend:
              service:
                name: tvheadend-home-srv
                port:
                  number: 9981
  tls:
    - hosts:
        - "tv.${MAIN_DOMAIN}"
      secretName: ${MAIN_DOMAIN}-tls
